Dark theme fully completed

--- a/src/app/components/popups/block/block.component.html
+++ b/src/app/components/popups/block/block.component.html
@@ -57,7 +57,7 @@
           <mdb-card-body class="p-0 px-lg-3">
             <mat-tab-group (selectedTabChange)="onTabChange($event);">
                   <mat-tab label="All">
-                    <div class="row table-responsive text-nowrap scrollbar-primary">
+                    <div class="row table-responsive text-nowrap scrollbar-near-moon">
                       <table mat-table [dataSource]="txsDataSource" class="table large-header">
                         <ng-container matColumnDef="hash">
                           <th mat-header-cell *matHeaderCellDef> Hash </th>
@@ -81,17 +81,17 @@
                     </div>
                   </mat-tab>
                   <mat-tab label="Transfer">
-                    <div class="row table-responsive text-nowrap scrollbar-primary">
+                    <div class="row table-responsive text-nowrap scrollbar-near-moon">
                       
                     </div>
                   </mat-tab>
                   <mat-tab label="Staking">
-                    <div class="row table-responsive text-nowrap scrollbar-primary">
+                    <div class="row table-responsive text-nowrap scrollbar-near-moon">
                       
                     </div>
                   </mat-tab>
                   <mat-tab label="Distribution">
-                    <div class="row table-responsive text-nowrap scrollbar-primary">
+                    <div class="row table-responsive text-nowrap scrollbar-near-moon">
                       
                     </div>
                   </mat-tab>
@@ -99,7 +99,7 @@
                     
                   </mat-tab>
                   <mat-tab label="Slashing">
-                    <div class="row table-responsive text-nowrap scrollbar-primary">
+                    <div class="row table-responsive text-nowrap scrollbar-near-moon">
                       
                     </div>
                   </mat-tab>
