--- a/src/app/components/popups/validator/validator.component.html
+++ b/src/app/components/popups/validator/validator.component.html
@@ -5,7 +5,7 @@
         <div class="px-0 p-lg-3 col-lg-6 col-md-12">
           <mdb-card class="rounded-0 testimonial-card">
                 <!--Bakcground color-->
-                <div style="height: 120px;" class="indigo"></div>
+                <div style="height: 120px;" class="validator-mb-card"></div>
           
                 <!--Avatar-->
                 <div class="avatar mx-auto">
