--- a/src/app/components/scroll-top/scroll-top.component.html
+++ b/src/app/components/scroll-top/scroll-top.component.html
@@ -1,6 +1,7 @@
 <!--Scroll to top-->
 <div class="scroll-to-top" [ngClass]="{'show-scrollTop': windowScrolled}">
-  <button (click)="scrollToTop()">
-      <i class="fa fa-chevron-up"></i>
+  <button class="btn btn-floating btn-large red waves-light" style="right:35px; bottom:35px;"
+(click)="scrollToTop()">
+      <i class="fas fa-arrow-up"></i>
   </button>
 </div>
