--- a/src/app/components/txs/txs.component.html
+++ b/src/app/components/txs/txs.component.html
@@ -1,5 +1,5 @@
 <span *ngIf="txs && txs.length >= INITIAL_TXS_COUNT; else elseLoading">
-  <div (scroll)="onScroll($event)" class="row table-responsive text-nowrap scrollbar-primary main-row mat-elevation-z8">
+  <div (scroll)="onScroll($event)" class="row table-responsive text-nowrap scrollbar-near-moon main-row mat-elevation-z8">
 
     <table mat-table
           [dataSource]="dataSource" 
