--- a/src/app/components/validators/validators.component.html
+++ b/src/app/components/validators/validators.component.html
@@ -25,7 +25,7 @@
     </div>
   </div>
 
-  <div class="mat-elevation-z8 scrollbar-primary table-responsive text-nowrap">
+  <div class="mat-elevation-z8 scrollbar-near-moon table-responsive text-nowrap">
     <table mat-table matSort [dataSource]="dataSource" class="mat-elevation-z8 w-auto">
 
       <ng-container matColumnDef="rank">
