--- a/src/styles.scss
+++ b/src/styles.scss
@@ -294,11 +294,11 @@ footer p {
 min-height: 450px;
 }
 
-.scrollbar-primary::-webkit-scrollbar {
+.scrollbar-near-moon::-webkit-scrollbar {
 width: 12px;
 background-color: white; }
 
-.scrollbar-primary::-webkit-scrollbar-thumb {
+.scrollbar-near-moon::-webkit-scrollbar-thumb {
 border-radius: 10px;
 -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
 background-color: #3F51B5; }
