--- a/src/app/components/blocks/blocks.component.html
+++ b/src/app/components/blocks/blocks.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="mat-elevation-z8 scrollbar-primary table-responsive text-nowrap">
+  <div class="mat-elevation-z8 scrollbar-near-moon table-responsive text-nowrap">
     <table  mat-table 
             [dataSource]="blocks" 
             class="mat-elevation-z8 w-auto">
