--- a/src/app/components/governance/governance.component.html
+++ b/src/app/components/governance/governance.component.html
@@ -1,5 +1,5 @@
 <app-chart-cards-gov *ngIf="proposals" [proposals]="proposals.slice(-3)"></app-chart-cards-gov>
-<div class="row">
+<div class="responsive-row">
   <div class="mat-elevation-z8 scrollbar-near-moon table-responsive text-nowrap">
     <table mat-table multiTemplateDataRows [dataSource]="dataSource" class="mat-elevation-z8 w-auto">
       
@@ -11,10 +11,17 @@
       </ng-container>
     
       <ng-container matColumnDef="title" sticky>
-        <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-code"></i>&nbsp;Title</th>
+        <th mat-header-cell *matHeaderCellDef class="th-lg">
+          <div class="align-center">
+            <i class="ion-code"></i>&nbsp;Title
+          </div>
+        </th>
         <td mat-cell *matCellDef="let proposal" mdbTooltip="{{proposal.proposal_content.value.title}}" placement="right">
-          <!-- <span style="cursor: pointer;" (click)="openGovDetailDialog(proposal)">{{proposal.proposal_content.value.title | slice:0:20}}...</span> -->
-          <mdb-badge color="pink" style="cursor: pointer;" (click)="openGovDetailDialog(proposal)">{{proposal.proposal_content.value.title | slice:0:20}} ...</mdb-badge>
+          <div class="align-center">
+            <mdb-badge color="pink" style="cursor: pointer;" (click)="openGovDetailDialog(proposal)">
+              {{proposal.proposal_content.value.title | slice:0:20}} ...
+            </mdb-badge>
+          </div>
         </td>
       </ng-container>
 
