--- a/src/app/components/validators/validators.component.html
+++ b/src/app/components/validators/validators.component.html
@@ -1,5 +1,5 @@
 <app-chart-cards></app-chart-cards>
-<div class="row" *ngIf="true; else elseBlock">
+<div class="responsive-row" *ngIf="true; else elseBlock">
   <!-- @aakatev	
     https://github.com/cosmos/cosmos-sdk/blob/9a16e2675f392b083dd1074ff92ff1f9fbda750d/types/staking.go
     Unbonded  BondStatus = 0x00
@@ -34,7 +34,7 @@
       </ng-container>
   
       <ng-container matColumnDef="moniker" sticky>
-        <th mat-sort-header="moniker" mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-at"></i>&nbsp;Name</th>
+        <th mat-sort-header="moniker" mat-header-cell *matHeaderCellDef class="th-lg align-center"><i class="ion-at"></i>&nbsp;Name</th>
         <td mat-cell *matCellDef="let validator"> 
           <span>
             <mat-chip-list>
@@ -142,10 +142,9 @@
           defaultColor="#ffffff">
       </tr>
     </table>
-  </div>
-
-  <div class="row paginator">
-    <mat-paginator [pageSizeOptions]="[10, 20, 50, 100]" showFirstLastButtons></mat-paginator>
+    <div class="row paginator">
+      <mat-paginator [pageSizeOptions]="[10, 20, 50, 100]" showFirstLastButtons></mat-paginator>
+    </div>
   </div>
 
 </div>
