--- a/src/app/theme.scss
+++ b/src/app/theme.scss
@@ -146,6 +146,7 @@ $dark-theme: mat-dark-theme($dark-primary, $dark-accent, $dark-warn);
   .mat-cell {
     background-color: #757575;
   }
+
   
   .mat-header-cell {
     color: #ffffff;
@@ -205,10 +206,24 @@ $dark-theme: mat-dark-theme($dark-primary, $dark-accent, $dark-warn);
   }
 }
 
+
 .row {
   max-width: 90%;
   margin: 0 auto;
 }
+
+.responsive-row {
+  max-width: 100vw;
+  margin: 0;
+}
+@media (min-width: 768px) {
+
+  .responsive-row {
+    max-width: 90%;
+    margin: 0 auto;
+  }
+}
+
 
 table {
   table-layout: fixed;
@@ -238,9 +253,11 @@ td {
 }
 
 .paginator {
-  display: flex;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  float: right;
-  margin-right: 60px;
+  display: flex !important;
+  margin-top: 20px !important;
+  margin-bottom: 20px !important;
+  float: right !important;
+  margin-right: 60px !important;
 }
+
+
