Minor css tweaks; Removed unused modules to allow for optimized bundling (Script to bundle added to json)

--- a/src/app/components/governance/chart-cards-gov/chart-cards-gov.component.html
+++ b/src/app/components/governance/chart-cards-gov/chart-cards-gov.component.html
@@ -1,5 +1,5 @@
 
-<div class="responsive-row">
+<div class="responsive-row d-flex">
   <div *ngFor="let proposal of proposals; let i = index" class="col-lg-4 col-md-12 mb-5">   
     <div class="card card-cascade narrower">    
       <div class="view view-cascade gradient-card-header mdb-color lighten-4">
