WiP: Switching to CommonJS; Modularizing app, and getting ready for lazy-loading integration

--- a/src/app/modules/validators/components/chart-cards/chart-cards.component.html
+++ b/src/app/modules/validators/components/chart-cards/chart-cards.component.html
@@ -1,5 +1,4 @@
-<div class="row">
-  <!-- Block Time Chart -->
+<!-- <div class="row">
   <div class="col-xl-4 col-12 mb-5">   
     <div class="card card-cascade narrower">  
       <div class="view view-cascade gradient-card-header indigo">
@@ -22,7 +21,6 @@
     </div>
   </div>
 
-  <!-- Commission Chart -->
   <div class="col-xl-4 col-12 mb-5">   
     <div class="card card-cascade narrower">  
       <div class="view view-cascade gradient-card-header blue-gradient">
@@ -43,7 +41,6 @@
     </div>
   </div>
 
-  <!-- Voting Power Chart -->
   <div class="col-xl-4 col-12 mb-5">   
     <div class="card card-cascade narrower">  
       <div class="view view-cascade gradient-card-header mdb-color lighten-4">
@@ -60,4 +57,4 @@
       </mdb-card-body>  
     </div>  
   </div>
-</div>
+</div> -->
