--- a/src/app/modules/validators/components/validators-table/validators-table.component.html
+++ b/src/app/modules/validators/components/validators-table/validators-table.component.html
@@ -1,4 +1,4 @@
-<app-chart-cards></app-chart-cards>
+<!-- <app-chart-cards></app-chart-cards> -->
 <div class="responsive-row" *ngIf="true; else elseBlock">
   <!-- @aakatev	
     https://github.com/cosmos/cosmos-sdk/blob/9a16e2675f392b083dd1074ff92ff1f9fbda750d/types/staking.go
@@ -150,6 +150,6 @@
 </div>
 <ng-template #elseBlock>
   <div style="display: flex; justify-content: center;">
-    <mdb-spinner spinnerColor="blue"></mdb-spinner>
+    <!-- <mdb-spinner spinnerColor="blue"></mdb-spinner> -->
   </div> 
 </ng-template>
